--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
                         </g>
                     </svg>
                 </div>
-                <h1 class="reveal">designer</h1>
+                <h1 id="designer" class="reveal">designer</h1>
             </div>
             <div class="csection">
                 <div class="text">
                     <div class="par">
                         <div class="r1">
-                            <h5>i am abhishek jaha,i</h5>
+                            <h5>i am Suraj Mohe,i</h5>
                         </div>
                         <div class="r1">
                             <h5> create <span>unconvential</span></h5>
@@ -577,7 +577,7 @@
                       <h1>let's talk</h1>
                  </div>
                  <div class="text1">
-                    <h1>About the next</h1>
+                    <h1 >About the next <br>big thing</h1>
                </div>
                <div class="text2">
                 <div class="arrow1">
@@ -587,7 +587,6 @@
                         <path d="M63 1.00001L63 63L0.999989 63" stroke-linecap="round" stroke-linejoin="round"></path>
                     </svg>
                 </div>
-                    <h1>big thing</h1>
                  </div>
            </div>
            <div class="button">
@@ -634,10 +633,6 @@
                         <img class="simg" src="https://abhishekjha.me/dribbble.b18d5ad5.svg" alt="">
                    </div>
                     
-           </div>
-           <div class="bnav">
-                 <p>©2022 Abhishek jha, All Rights Reserved • Credits</p>
-                 <h5>2020 Portfolio</h5>
            </div>
         </div>
     </div>
