add some changes

--- a/index.html
+++ b/index.html
@@ -574,10 +574,10 @@
         <div id="part4">
            <div class="text">
                  <div class="text1">
-                      <h1>let's talk</h1>
+                      <h1 id="lets-talk">let's talk</h1>
                  </div>
                  <div class="text1">
-                    <h1 >About the next <br>big thing</h1>
+                    <h1 id="about-next">About the next <br>big thing</h1>
                </div>
                <div class="text2">
                 <div class="arrow1">
